# milkmilk

./: Cargo.toml  README.md
src/: commands.rs  docker.rs  main.rs  setup.rs  utils.rs
src/backend/: axum.rs
src/frontend/: css.rs  mod.rs  nextjs.rs
