[package]
name = "milkmilk"
authors = ["Joshua Mo"]
description = "Build fullstack websites that use a Rust backend quicker."
keywords = ["cli", "web"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
version = "0.1.0"
edition = "2021"
default-run="cargo-mkmk"
license-file = "./LICENSE.md"
documentation = "https://github.com/joshua-mo-143/milkmilk"
homepage = "https://github.com/joshua-mo-143/milkmilk"
repository = "https://github.com/joshua-mo-143/milkmilk"

[[bin]]
name = "cargo-mkmk"
path = "src/main.rs"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
 